--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -61,15 +61,15 @@
     <string name="please_select_destination">Prosím zvolte cílovou složku</string>
     <string name="source_and_destination_same">Zdrojová a cílová složka se musí lišit</string>
     <string name="copy_failed">Nelze zkopírovat soubory</string>
-    <string name="copying">Kopíruji&#8230;</string>
+    <string name="copying">Kopíruji…</string>
     <string name="copying_success">Soubory byly úspěšně zkopírovány</string>
     <string name="copy_move_failed">Vyskytla se chyba</string>
-    <string name="moving">Přesunuji&#8230;</string>
+    <string name="moving">Přesunuji…</string>
     <string name="moving_success">Soubory byly úspěšně přesunuty</string>
     <string name="moving_success_partial">Některé soubory nemohly být přesunuty</string>
     <string name="copying_success_partial">Některé soubory nemohly být zkopírovány</string>
     <string name="no_files_selected">Žádné soubory vybrány</string>
-    <string name="saving">Ukládám&#8230;</string>
+    <string name="saving">Ukládám…</string>
     <string name="could_not_create_folder">Could not create folder %s</string>
     <string name="could_not_create_file">Could not create file %s</string>
 
@@ -102,8 +102,8 @@
     <string name="confirm_selection">Confirm selection</string>
 
     <plurals name="items">
-        <item quantity="one">%1$d položka</item>
-        <item quantity="other">%1$d položek</item>
+        <item quantity="one">%d položka</item>
+        <item quantity="other">%d položek</item>
     </plurals>
 
     <!-- Storages -->
@@ -220,17 +220,35 @@
 
     <!-- Times -->
     <plurals name="seconds">
-        <item quantity="one">%1$d second</item>
-        <item quantity="other">%1$d seconds</item>
+        <item quantity="one">%d second</item>
+        <item quantity="other">%d seconds</item>
     </plurals>
     <plurals name="minutes">
-        <item quantity="one">%1$d minute</item>
-        <item quantity="other">%1$d minutes</item>
+        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minutes</item>
     </plurals>
     <plurals name="hours">
-        <item quantity="one">%1$d hour</item>
-        <item quantity="other">%1$d hours</item>
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
     </plurals>
+
+    <plurals name="in_seconds">
+        <item quantity="one">%d second</item>
+        <item quantity="other">%d seconds</item>
+    </plurals>
+    <plurals name="in_minutes">
+        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minutes</item>
+    </plurals>
+    <plurals name="in_hours">
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
+    </plurals>
+
+    <!-- For example: The alarm will go off in 6 hours and 5 minutes -->
+    <string name="alarm_goes_off_in_hours_minutes">The alarm will go off in %1$d hours and %2$d minutes</string>
+    <string name="alarm_goes_off_in_hours">The alarm will go off in %d hours</string>
+    <string name="alarm_goes_off_in_minutes">The alarm will go off in %d minutes</string>
 
     <!-- Settings -->
     <string name="settings">Nastavení</string>
@@ -250,6 +268,9 @@
     <string name="prevent_phone_from_sleeping">Prevent phone from sleeping</string>
     <string name="skip_delete_confirmation">Always skip delete confirmation dialog</string>
     <string name="enable_pull_to_refresh">Enable pull-to-refresh from the top</string>
+    <string name="use_24_hour_time_format">Use 24-hour time format</string>
+    <string name="sunday_first">Start week on Sunday</string>
+    <string name="widgets">Widgets</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibility</string>
