--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -61,15 +61,15 @@
     <string name="please_select_destination">宛先を選択してください</string>
     <string name="source_and_destination_same">元と先を同じにすることはできません</string>
     <string name="copy_failed">ファイルをコピーできませんでした</string>
-    <string name="copying">コピー中&#8230;</string>
+    <string name="copying">コピー中…</string>
     <string name="copying_success">ファイルを正常にコピーしました</string>
     <string name="copy_move_failed">エラーが発生しました</string>
-    <string name="moving">移動中&#8230;</string>
+    <string name="moving">移動中…</string>
     <string name="moving_success">ファイルを正常に移動しました</string>
     <string name="moving_success_partial">一部のファイルが移動できませんでした</string>
     <string name="copying_success_partial">一部のファイルがコピーできませんでした</string>
     <string name="no_files_selected">ファイルが選択されていません</string>
-    <string name="saving">保存中&#8230;</string>
+    <string name="saving">保存中…</string>
     <string name="could_not_create_folder">フォルダー %s を作成できません</string>
     <string name="could_not_create_file">ファイル %s を作成できません</string>
 
@@ -170,7 +170,7 @@
     <string name="remove">Remove</string>
     <string name="rename">名前の変更</string>
     <string name="share">共有</string>
-    <string name="share_via">共有&#8230;</string>
+    <string name="share_via">共有</string>
     <string name="select_all">すべて選択</string>
     <string name="hide">非表示</string>
     <string name="unhide">再表示</string>
@@ -220,17 +220,35 @@
 
     <!-- Times -->
     <plurals name="seconds">
-        <item quantity="one">%1$d秒</item>
-        <item quantity="other">%1$d秒</item>
+        <item quantity="one">%d秒</item>
+        <item quantity="other">%d秒</item>
     </plurals>
     <plurals name="minutes">
-        <item quantity="one">%1$d分</item>
-        <item quantity="other">%1$d分</item>
+        <item quantity="one">%d分</item>
+        <item quantity="other">%d分</item>
     </plurals>
     <plurals name="hours">
-        <item quantity="one">%1$d時間</item>
-        <item quantity="other">%1$d時間</item>
+        <item quantity="one">%d時間</item>
+        <item quantity="other">%d時間</item>
     </plurals>
+
+    <plurals name="in_seconds">
+        <item quantity="one">%d second</item>
+        <item quantity="other">%d seconds</item>
+    </plurals>
+    <plurals name="in_minutes">
+        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minutes</item>
+    </plurals>
+    <plurals name="in_hours">
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
+    </plurals>
+
+    <!-- For example: The alarm will go off in 6 hours and 5 minutes -->
+    <string name="alarm_goes_off_in_hours_minutes">The alarm will go off in %1$d hours and %2$d minutes</string>
+    <string name="alarm_goes_off_in_hours">The alarm will go off in %d hours</string>
+    <string name="alarm_goes_off_in_minutes">The alarm will go off in %d minutes</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
@@ -250,6 +268,9 @@
     <string name="prevent_phone_from_sleeping">Prevent phone from sleeping</string>
     <string name="skip_delete_confirmation">Always skip delete confirmation dialog</string>
     <string name="enable_pull_to_refresh">Enable pull-to-refresh from the top</string>
+    <string name="use_24_hour_time_format">Use 24-hour time format</string>
+    <string name="sunday_first">Start week on Sunday</string>
+    <string name="widgets">Widgets</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibility</string>
@@ -303,7 +324,7 @@
     <string name="third_party_licences_underlined"><u>サードパーティー ライセンス</u></string>
     <string name="invite_friends_underlined"><u>友達を招待</u></string>
     <string name="share_text">%2$s で %1$s を確認してください</string>
-    <string name="invite_via">招待&#8230;</string>
+    <string name="invite_via">招待</string>
     <string name="rate_us_underlined"><u>Play ストアで評価してください</u></string>
     <string name="donate">寄付</string>
     <string name="donate_underlined"><u>寄付</u></string>
