--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -61,15 +61,15 @@
     <string name="please_select_destination">대상 경로를 선택하세요.</string>
     <string name="source_and_destination_same">원본파일과 대상파일은 동일할 수 없음</string>
     <string name="copy_failed">파일을 복사 할 수 없음</string>
-    <string name="copying">복사중&#8230;</string>
+    <string name="copying">복사중…</string>
     <string name="copying_success">파일복사 성공</string>
     <string name="copy_move_failed">에러발생</string>
-    <string name="moving">이동중&#8230;</string>
+    <string name="moving">이동중…</string>
     <string name="moving_success">파일이동 성공</string>
     <string name="moving_success_partial">일부 파일을 이동 할 수 없음</string>
     <string name="copying_success_partial">일부 파일을 복사 할 수 없음</string>
     <string name="no_files_selected">파일이 선택되지 않음</string>
-    <string name="saving">저장중&#8230;</string>
+    <string name="saving">저장중…</string>
     <string name="could_not_create_folder">%s 폴더 생성에 실패함</string>
     <string name="could_not_create_file">%s 파일 생성에 실패함</string>
 
@@ -102,8 +102,8 @@
     <string name="confirm_selection">Confirm selection</string>
 
     <plurals name="items">
-        <item quantity="one">%1$d item</item>
-        <item quantity="other">%1$d items</item>
+        <item quantity="one">%d item</item>
+        <item quantity="other">%d items</item>
     </plurals>
 
     <!-- Storages -->
@@ -220,17 +220,35 @@
 
     <!-- Times -->
     <plurals name="seconds">
-        <item quantity="one">%1$d second</item>
-        <item quantity="other">%1$d seconds</item>
+        <item quantity="one">%d second</item>
+        <item quantity="other">%d seconds</item>
     </plurals>
     <plurals name="minutes">
-        <item quantity="one">%1$d minute</item>
-        <item quantity="other">%1$d minutes</item>
+        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minutes</item>
     </plurals>
     <plurals name="hours">
-        <item quantity="one">%1$d hour</item>
-        <item quantity="other">%1$d hours</item>
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
     </plurals>
+
+    <plurals name="in_seconds">
+        <item quantity="one">%d second</item>
+        <item quantity="other">%d seconds</item>
+    </plurals>
+    <plurals name="in_minutes">
+        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minutes</item>
+    </plurals>
+    <plurals name="in_hours">
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
+    </plurals>
+
+    <!-- For example: The alarm will go off in 6 hours and 5 minutes -->
+    <string name="alarm_goes_off_in_hours_minutes">The alarm will go off in %1$d hours and %2$d minutes</string>
+    <string name="alarm_goes_off_in_hours">The alarm will go off in %d hours</string>
+    <string name="alarm_goes_off_in_minutes">The alarm will go off in %d minutes</string>
 
     <!-- Settings -->
     <string name="settings">설정</string>
@@ -250,6 +268,9 @@
     <string name="prevent_phone_from_sleeping">Prevent phone from sleeping</string>
     <string name="skip_delete_confirmation">삭제 확인 다이얼로그 비활성화</string>
     <string name="enable_pull_to_refresh">상하단 스와이프 동작으로 새로고침</string>
+    <string name="use_24_hour_time_format">Use 24-hour time format</string>
+    <string name="sunday_first">Start week on Sunday</string>
+    <string name="widgets">Widgets</string>
 
     <!-- Setting sections -->
     <string name="visibility">가시성</string>
