--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -61,15 +61,15 @@
     <string name="please_select_destination">Velg et mål</string>
     <string name="source_and_destination_same">Kilde og mål kan ikke være det samme</string>
     <string name="copy_failed">Kunne ikke kopiere filene</string>
-    <string name="copying">Kopierer&#8230;</string>
+    <string name="copying">Kopierer…</string>
     <string name="copying_success">Filer ble kopiert vellykket</string>
     <string name="copy_move_failed">En feil oppstod</string>
-    <string name="moving">Flytter&#8230;</string>
+    <string name="moving">Flytter…</string>
     <string name="moving_success">Filer ble flyttet vellykket</string>
     <string name="moving_success_partial">Noen filer kunne ikke flyttes</string>
     <string name="copying_success_partial">Noen filer kunne ikke kopieres</string>
     <string name="no_files_selected">Ingen filer valgt</string>
-    <string name="saving">Lagrer&#8230;</string>
+    <string name="saving">Lagrer…</string>
     <string name="could_not_create_folder">Kunne ikke opprette mappen %s</string>
     <string name="could_not_create_file">Kunne ikke opprette filen %s</string>
 
@@ -102,8 +102,8 @@
     <string name="confirm_selection">Bekreft valg</string>
 
     <plurals name="items">
-        <item quantity="one">%1$d element</item>
-        <item quantity="other">%1$d elementer</item>
+        <item quantity="one">%d element</item>
+        <item quantity="other">%d elementer</item>
     </plurals>
 
     <!-- Storages -->
@@ -220,17 +220,35 @@
 
     <!-- Times -->
     <plurals name="seconds">
-        <item quantity="one">%1$d sekund</item>
-        <item quantity="other">%1$d sekunder</item>
+        <item quantity="one">%d sekund</item>
+        <item quantity="other">%d sekunder</item>
     </plurals>
     <plurals name="minutes">
-        <item quantity="one">%1$d minutt</item>
-        <item quantity="other">%1$d minutter</item>
+        <item quantity="one">%d minutt</item>
+        <item quantity="other">%d minutter</item>
     </plurals>
     <plurals name="hours">
-        <item quantity="one">%1$d time</item>
-        <item quantity="other">%1$d timer</item>
+        <item quantity="one">%d time</item>
+        <item quantity="other">%d timer</item>
     </plurals>
+
+    <plurals name="in_seconds">
+        <item quantity="one">%d second</item>
+        <item quantity="other">%d seconds</item>
+    </plurals>
+    <plurals name="in_minutes">
+        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minutes</item>
+    </plurals>
+    <plurals name="in_hours">
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
+    </plurals>
+
+    <!-- For example: The alarm will go off in 6 hours and 5 minutes -->
+    <string name="alarm_goes_off_in_hours_minutes">The alarm will go off in %1$d hours and %2$d minutes</string>
+    <string name="alarm_goes_off_in_hours">The alarm will go off in %d hours</string>
+    <string name="alarm_goes_off_in_minutes">The alarm will go off in %d minutes</string>
 
     <!-- Settings -->
     <string name="settings">Innstillinger</string>
@@ -250,6 +268,9 @@
     <string name="prevent_phone_from_sleeping">Forhindre at telefonen går i hvilemodus</string>
     <string name="skip_delete_confirmation">Hopp alltid over dialog for slettebekreftelse</string>
     <string name="enable_pull_to_refresh">Aktiver vertikal sveipebevegelse fra toppen for innholdsgjenoppfrisking</string>
+    <string name="use_24_hour_time_format">Use 24-hour time format</string>
+    <string name="sunday_first">Start week on Sunday</string>
+    <string name="widgets">Widgets</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighet</string>
