--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -40,7 +40,7 @@
     <string name="rename_folder_exists">Folder o tej nazwie już istnieje</string>
     <string name="rename_folder_root">Nie mogę zmienić nazwy folderu głównego</string>
     <string name="rename_folder_ok">Zmieniono nazwę folderu</string>
-    <string name="renaming_folder">Zmieniam nazwę folderu&#8230;</string>
+    <string name="renaming_folder">Zmieniam nazwę folderu…</string>
     <string name="filename_cannot_be_empty">Nazwa pliku nie może być pusta</string>
     <string name="filename_invalid_characters">Nazwa pliku zawiera niedozwolone znaki</string>
     <string name="filename_invalid_characters_placeholder">Nazwa \'%s\' zawiera niedozwolone znaki</string>
@@ -61,15 +61,15 @@
     <string name="please_select_destination">Wybierz miejsce docelowe</string>
     <string name="source_and_destination_same">Miejsce żródłowe i docelowe nie może być takie samo</string>
     <string name="copy_failed">Nie można skopiować pliku</string>
-    <string name="copying">Kopiuję&#8230;</string>
+    <string name="copying">Kopiuję…</string>
     <string name="copying_success">Pliki zostały skopiowane</string>
     <string name="copy_move_failed">Wystąpił błąd</string>
-    <string name="moving">Przenoszę&#8230;</string>
+    <string name="moving">Przenoszę…</string>
     <string name="moving_success">Pliki zostały przeniesione</string>
     <string name="moving_success_partial">Niektóre pliki nie mogą być przeniesione</string>
     <string name="copying_success_partial">Niektóre pliki nie mogą być skopiowane</string>
     <string name="no_files_selected">Nie wybrano żadnych plików</string>
-    <string name="saving">Zapsisuję&#8230;</string>
+    <string name="saving">Zapsisuję…</string>
     <string name="could_not_create_folder">Nie mogę utworzyć folderu %s</string>
     <string name="could_not_create_file">Nie mogę utworzyć pliku %s</string>
 
@@ -102,9 +102,9 @@
     <string name="confirm_selection">Potwierdź wybór</string>
 
     <plurals name="items">
-        <item quantity="one">%1$d pozycja</item>
-        <item quantity="few">%1$d pozycje</item>
-        <item quantity="other">%1$d pozycji</item>
+        <item quantity="one">%d pozycja</item>
+        <item quantity="few">%d pozycje</item>
+        <item quantity="other">%d pozycji</item>
     </plurals>
 
     <!-- Storages -->
@@ -221,20 +221,38 @@
 
     <!-- Times -->
     <plurals name="seconds">
-        <item quantity="one">%1$d sekunda</item>
-        <item quantity="few">%1$d sekundy</item>
-        <item quantity="other">%1$d sekund</item>
+        <item quantity="one">%d sekunda</item>
+        <item quantity="few">%d sekundy</item>
+        <item quantity="other">%d sekund</item>
     </plurals>
     <plurals name="minutes">
-        <item quantity="one">%1$d minuta</item>
-        <item quantity="few">%1$d minuty</item>
-        <item quantity="other">%1$d minut</item>
+        <item quantity="one">%d minuta</item>
+        <item quantity="few">%d minuty</item>
+        <item quantity="other">%d minut</item>
     </plurals>
     <plurals name="hours">
-        <item quantity="one">%1$d godzina</item>
-        <item quantity="few">%1$d godziny</item>
-        <item quantity="other">%1$d godzin</item>
+        <item quantity="one">%d godzina</item>
+        <item quantity="few">%d godziny</item>
+        <item quantity="other">%d godzin</item>
     </plurals>
+
+    <plurals name="in_seconds">
+        <item quantity="one">%d second</item>
+        <item quantity="other">%d seconds</item>
+    </plurals>
+    <plurals name="in_minutes">
+        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minutes</item>
+    </plurals>
+    <plurals name="in_hours">
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
+    </plurals>
+
+    <!-- For example: The alarm will go off in 6 hours and 5 minutes -->
+    <string name="alarm_goes_off_in_hours_minutes">The alarm will go off in %1$d hours and %2$d minutes</string>
+    <string name="alarm_goes_off_in_hours">The alarm will go off in %d hours</string>
+    <string name="alarm_goes_off_in_minutes">The alarm will go off in %d minutes</string>
 
     <!-- Settings -->
     <string name="settings">Ustawienia</string>
@@ -254,6 +272,9 @@
     <string name="prevent_phone_from_sleeping">Zapobiegaj przejściu urządzenia w stan uśpienia</string>
     <string name="skip_delete_confirmation">Nie pokazuj okna z potwierdzeniem usunięcia elementu(-ów)</string>
     <string name="enable_pull_to_refresh">Włącz gest pociągnięcia ekranu od góry w celu odświeżenia widoku</string>
+    <string name="use_24_hour_time_format">Use 24-hour time format</string>
+    <string name="sunday_first">Start week on Sunday</string>
+    <string name="widgets">Widgets</string>
 
     <!-- Setting sections -->
     <string name="visibility">Widoczność</string>
